# CherryOnTop

./: README.md  environment.yml  pyproject.toml  requirements.txt  runtests.py
app/: Home.py  ProductionPlan.py  Production_Plan.py  demo.py  k_model.pth  model1.pth  s_model.pth  utils.py
app/pages/: Home.py  (+9 more)
data/: mappings.json  weekly_summary.csv  y.csv
notebooks/: adjusted_projections.ipynb  filteringandprocessing.ipynb  graph_demo.ipynb  harvest_curves.ipynb  harvest_visuals.ipynb  insights.ipynb  loading.ipynb  new_preprocess.ipynb  partial_climate.ipynb  preprocessing.ipynb  production_plan.ipynb  streamlit.ipynb
sandbox/: 2025_production_plan.ipynb  best_final_model.pth  best_kilo_model.pth  best_schedule_model.pth  cherry_table.ipynb  curve_adjustment.ipynb  data_filtering.ipynb  data_pull.ipynb  data_vis.ipynb  datachanging.ipynb  demo.ipynb  graph_demo.ipynb  graph_setup.ipynb  graphing.ipynb  graphing_sample.ipynb  graphing_table.ipynb  hyperparameter_tuning.ipynb  model_training.ipynb  new_preprocess.ipynb  reset.ipynb  sanity_check.ipynb  stat_fitting.ipynb  stat_model.ipynb  update_weather.ipynb  y.csv
src/: dataset.py  encoder.py  graphs.py  hyperparameter_tuning.py  load.py  model.py  preprocess.py  preprocessing.py  stats_predictor.py  table.py  training.py  updated_dataset.py  updated_model.py  updated_utils.py  utils.py
take_two/: dataset.py  debug_data.py  dist_model.pth  models.py  sched_model.pth  setup.ipynb  test_dataloader.pth  training.ipynb  training.py  trainingpt2.py  yield_model.pth
test_reports/: test_report_20250503_150447.txt
(+247 files in other folders)
